# ramon-loya-RTK-1

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Objectives.md  README.md  pyproject.toml  rtk1_audit.db  rtk1_campaigns.db  sample-report.html  streamlit_app.py
.github/workflows/: redteam.yml  update_docs.yml.bak
app/: facade.py  llm_provider.py  main.py  pyrit_langchain_target.py  schemas.py
app/core/: README.md  adaptive_evasion.py  alerts.py  attack_graph.py  attack_library.py  audit.py  billing.py  blast_radius.py  cir.py  competitor_intel.py  config.py  continual_monitor.py  delivery.py  federated.py  fingerprint.py  history.py  isac_transporter.py  logging.py  metrics.py  mutation.py  rate_limiter.py  regulatory.py  report_signer.py  scheduler.py  scoring.py  semantic_drift.py  social_automation.py  subscription.py
app/domain/: engagement.py  models.py
app/orchestrator/: claude_orchestrator.py
app/providers/: base.py  byom_provider.py  compliance_riyadh.py  crewai_provider.py  deepteam_provider.py  digital_twin_providers.py  garak_provider.py  glasswing_provider.py  multi_vector_provider.py  neutrality_provider.py  promptfoo_provider.py  pyrit_provider.py  rag_injection_provider.py  scorer_generator.py  tool_abuse_provider.py
docs/: CNAME  architecture.md  index(6).html  index.html  middle-east-sample-report.html  middle-east.html  sample-report.html  service_catalog.md
proof/: README.md
scripts/: startup_all.ps1
tests/: test_integration.py
venv_rtk/: pyvenv.cfg
venv_rtk/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jp.py  (+4 more)
(+1 files in other folders)
